# haggle

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/haggle/: dacc.html
docs/: .buildinfo  genindex.html  haggle.ipynb  index.html  search.html  searchindex.js  table_of_contents.html
docs/_sources/: table_of_contents.rst.txt
docs/_sources/module_docs/: haggle.rst.txt
docs/_sources/module_docs/haggle/: dacc.rst.txt
docs/module_docs/: haggle.html
docs/module_docs/haggle/: dacc.html  small_test.html
docsrc/: index.rst
docsrc/module_docs/haggle/: small_test.rst
haggle/: __init__.py  dacc.py  small_test.py
module_docs/: haggle.html
module_docs/haggle/: dacc.html  small_test.html
