[metadata]
name = haggle
display_name = haggle
url = https://github.com/thorwhalen/haggle
version = 0.1.5
platforms = any
description = A facade to Kaggle data
root_url = https://github.com/thorwhalen/
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	kaggle
	data

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	kaggle
	py2store

