[metadata]
name = haggle
version = 0.1.6
url = https://github.com/thorwhalen/haggle
platforms = any
description_file = README.md
display_name = haggle
description = A facade to Kaggle data
root_url = https://github.com/thorwhalen/
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		kaggle
		data

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	kaggle
	py2store

